[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Entities/Sword/Blade.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Projectiles/SwordProjectile/SwordProjectile.gd" type="Script" id=2]
[ext_resource path="res://Components/Visuals/ParticleSpawner/ParticleSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/Collision/Attackbox/Attackbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/SFX/SwordShootHit.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 3 )

[sub_resource type="Animation" id=2]
resource_name = "Death"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ 0.0, 150.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 3 )

[node name="SwordProjectile" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.785398
texture = ExtResource( 1 )
offset = Vector2( 1, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 0 )
shape = SubResource( 5 )

[node name="ParticleSpawner" parent="." instance=ExtResource( 3 )]
place_on_z = -1
wait_time = 0.05
particle_to_spawn = "res://Prefabs/Particles/SwordTrail/SwordTrail.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Attackbox" parent="." instance=ExtResource( 4 )]
damage = 1
ignore_player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox"]
position = Vector2( 5, 0 )
shape = SubResource( 4 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_SwordProjectile_body_entered"]
[connection signal="on_attack" from="Attackbox" to="." method="_on_Attackbox_on_attack"]
